added support for all TMD data types for writing arrows